--- a/mallvictoria/mallvictoria/plantillas/base/navbar.html
+++ b/mallvictoria/mallvictoria/plantillas/base/navbar.html
@@ -19,7 +19,7 @@
 
 						<ul class="right">
 					  		<li class="search">
-							<form id="frmBusqueda" action="busquedas" method="POST">
+							<form id="frmBusqueda" action="/busquedas" method="POST">
 								<input type="hidden" name="csrfmiddlewaretoken">
 							    <input type="text" placeholder="Buscar" id="texto_busqueda" name="texto_busqueda">
 							</form>
