--- a/mallvictoria/mallvictoria/plantillas/base/frmregistro.html
+++ b/mallvictoria/mallvictoria/plantillas/base/frmregistro.html
@@ -2,7 +2,7 @@
 <div id="registro" class="reveal-modal medium">
   <h3>Bienvenido</h3>
   	<fieldset>
-  		<form id="frmLogin" action="login" method="POST">
+  		<form id="frmLogin" action="/login" method="POST">
 			<label for="m_correo">Correo:</label>
 			<input type="text" id="m_correo" name="m_correo">
 			<label for="m_password">Contrase&ntilde;a:</label>
