--- a/mallvictoria/mallvictoria/plantillas/base/categorias.html
+++ b/mallvictoria/mallvictoria/plantillas/base/categorias.html
@@ -1,3 +1,3 @@
 {% for elemento in lista %}
-<li><a href="categoria?idcategoria={{elemento.id}}">{{elemento.categoria}}</a></li>
+<li><a href="/categoria?idcategoria={{elemento.id}}">{{elemento.categoria}}</a></li>
 {% endfor %}
