--- a/mallvictoria/mallvictoria/plantillas/base/head.html
+++ b/mallvictoria/mallvictoria/plantillas/base/head.html
@@ -6,3 +6,8 @@
 <link rel="stylesheet" href="{{STATIC_URL}}foundation/foundation_icons_all/foundation_icons_social/stylesheets/social_foundicons.css"> 
 <link rel="stylesheet" href="{{STATIC_URL}}css/estilo.css">
 <link rel="stylesheet" href="{{STATIC_URL}}css/navbar.css">
+<link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico" />
+<link href='{{STATIC_URL}}img/favicon.ico' rel='shortcut icon' type='image/x-icon'/>
+<link href='{{STATIC_URL}}img/favicon.ico' rel='icon' type='image/x-icon'/>
+<link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico" type="image/vnd.microsoft.icon" />
+<link rel="icon" href="{{STATIC_URL}}img/favicon.ico" type="image/vnd.microsoft.icon" />
