--- a/mallvictoria/mallvictoria/plantillas/base/navbar.html
+++ b/mallvictoria/mallvictoria/plantillas/base/navbar.html
@@ -31,7 +31,7 @@
 						    <ul class="dropdown" id="categorias">
 						    	<li><a href="/administracion/">Mis Articulos</a></li>
 						    	<li><a href="">Perfil</a></li>
-						    	<li><a href="">Ayuda</a></li>
+						    	<li><a href="/ayuda">Ayuda</a></li>
 						    	<li><a href="#" id="btnCerrarSession"> <i class="general foundicon-lock"></i> Cerrar</a></li>
 						    </ul>
 						</li>						    
