--- a/mallvictoria/mallvictoria/plantillas/administracion/principal.html
+++ b/mallvictoria/mallvictoria/plantillas/administracion/principal.html
@@ -74,6 +74,9 @@
     		box-shadow: 0 0 10px rgba(50, 50, 50, 0.5);
     		cursor: pointer;     		   	
 	}
+	.btn_locker{
+		width: 100px;
+	}
 </style>
 </head>
 <body>
