--- a/mallvictoria/mallvictoria/plantillas/busquedas.html
+++ b/mallvictoria/mallvictoria/plantillas/busquedas.html
@@ -13,7 +13,7 @@
 		{% include "base/header.html" %}	
 		<section id="wrapper" class="row wrap">
 			<div class="twelve mobile-four mobile-four columns">
-				Busqueda: "{{palabra}}"
+				<p>Busqueda: "{{palabra}}"</p>
 				<input type="hidden" id="palabra" value="{{palabra}}">
 				<input type="hidden" id="num_pagina" value="1">
 				<div class="row" id="lista_articulos">
