--- a/mallvictoria/mallvictoria/plantillas/administracion/locker.html
+++ b/mallvictoria/mallvictoria/plantillas/administracion/locker.html
@@ -2,12 +2,6 @@
 <html lang="es">
 <head>
 {% include "base/head.html" %}  	
-<style>
-	#id_costo{
-		height: 28px;
-		line-height: 25px;
-	}
-</style>
 </head>
 <body>
 
@@ -20,19 +14,21 @@
 
 		<section id="wrapper" class="row wrap">
 		<div class="twelve mobile-four columns">
-			<h1>Locker {{idlocker}}</h1>
-			<div>{{formulario.errors}}</div>																			
-		<form class="custom" enctype="multipart/form-data" action="" method="post">{% csrf_token %}
+		<h1>Locker {{idlocker}}</h1>
+		<form id="frmarticulo" class="custom" enctype="multipart/form-data" action="" method="post">{% csrf_token %}
 			<fieldset>					
 					<input type="hidden" name="usuario" id="id_usuario">
 					<input type="hidden" name="status" id="id_status" value="1">
-					<label for="titulo">Articulo:</label>
+					 <label for="titulo" {%if formulario.errors.titulo%}class='error'{%endif%}>Articulo:</label>					
 					{{formulario.titulo}}
-					<label for="descripcion">Descripcion:</label>
+					{{formulario.errors.titulo}}
+					<label for="descripcion" {%if formulario.errors.descripcion%}class='error'{%endif%}>Descripcion:</label>
 					{{formulario.descripcion}}
+					{{formulario.errors.descripcion}}
+
 					<div class="row">
 						<div class="four columns">
-							<label for="costo">Costo:</label>
+							<label for="costo" {%if formulario.errors.costo%}class='error'{%endif%}>Costo:</label>
 							<div class="row">
 							  <div class="twelve columns">
 							    <div class="row collapse">
@@ -56,9 +52,16 @@
 								{{formulario.categoria}}											
 						</div>
 					</div>	
-					{{formulario.imagen}}												
+					
+					<div class="row"><div class="twelve columns">{{formulario.errors.costo}}</div></div>
+
+					<div>{{formulario.imagen}}</div>	
+					<div class="row">
+						<div class="twelve columns">{{formulario.errors.imagen}}</div>
+					</div>
 			</fieldset>						
-			<input type="submit" class="button success" value="Guardar">
+			<input type="submit" id="btnGuarda" class="button success" value="Guardar">
+			<span class="msg_guardan" style="display:none;"> * Procesando los datos, espere un monento por favor.</span>
 		</form>					
 		</div>	
 		</section>		
@@ -73,8 +76,11 @@
 <!-- Scripts -->
 <script src="{{STATIC_URL}}js/mallvictoria.js"></script>
 <script>
-	$("#btnGuarda").click(function(){
-		alert($("#tipo").val())
+	$("#frmarticulo").submit(function(){
+		//$(this).val('Guardando...');
+		$(".msg_guardan").css("display","inline");
+		$(this).attr("disabled","disabled");
+
 	});
 	$("#id_usuario").val(localStorage.getItem("id"))
 </script>
