--- a/mallvictoria/mallvictoria/plantillas/administracion/articulo_locker.html
+++ b/mallvictoria/mallvictoria/plantillas/administracion/articulo_locker.html
@@ -11,6 +11,7 @@
 		margin-top: 30px;
 	}
 </style>
+
 {% for articulo in lista %}
 	{% if articulo.0.articulo %}
 		<article class="four columns">
@@ -51,10 +52,11 @@
 
 <script>
 	$(".btnCerrarPub").click(function(){
-		console.log("click");
+		$("#msg_confirmar").reveal();
 		var idarticulo=$(this).attr("idarticulo");
-		$.post("/termina_publicacion",{csrfmiddlewaretoken:csrftoken,idarticulo:idarticulo},function(){
-			window.location='/administracion/';
-		}); 	
+		$("#id_articulo_terminar").val(idarticulo);
+		//$.post("/termina_publicacion",{csrfmiddlewaretoken:csrftoken,idarticulo:idarticulo},function(){
+		//	window.location='/administracion/';
+		//}); 	
 	});
 </script>
