--- a/mallvictoria/mallvictoria/plantillas/detalle.html
+++ b/mallvictoria/mallvictoria/plantillas/detalle.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="es">
 <head>
-<meta property=”og:image” content=”{{articulo.imagen.thumbnail.url}}” />
-<meta property=”title” content=”{{articulo.titulo}}” />	
-<meta property=”descripcion” content=”{{articulo.titulo}}” />
+<meta property=og:image content={{articulo.imagen.thumbnail.url}} />
+<meta property=og:title content={{articulo.titulo}} />	
+<meta property=og:descripcion content={{articulo.descripcion}} />
 {% include "base/head.html" %}  	
 </head>
 <body>
