--- a/mallvictoria/mallvictoria/plantillas/detalle.html
+++ b/mallvictoria/mallvictoria/plantillas/detalle.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="es">
 <head>
-<meta property=og:image content={{articulo.imagen.thumbnail.url}} />
+<meta property=og:image content=mallvictoria.com{{articulo.imagen.thumbnail.url}} />
 <meta property=og:title content={{articulo.titulo}} />	
-<meta property=og:descripcion content={{articulo.descripcion}} />
+<meta property="og:descripcion" content="{{articulo.descripcion}}" />
 {% include "base/head.html" %}  	
 </head>
 <body>
