--- a/mallvictoria/mallvictoria/plantillas/detalle.html
+++ b/mallvictoria/mallvictoria/plantillas/detalle.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta property=og:image content=http://mallvictoria.com{{articulo.imagen.thumbnail.url}} />
-<meta property=og:title content=Mall Victoria - {{articulo.titulo}} />	
+<meta property=og:title content={{articulo.titulo}} />	
 <meta property=og:description content={{articulo.descripcion}} />
 {% include "base/head.html" %}  	
 </head>
