--- a/mallvictoria/mallvictoria/plantillas/base/footer.html
+++ b/mallvictoria/mallvictoria/plantillas/base/footer.html
@@ -1,3 +1,22 @@
+<style>
+	.footer-columns{
+		padding-top: 80px;
+		color: #999;
+	}
+	.footer-columns h4{
+		color: #999;
+		font-family: "Signika",Helvetica;
+	}
+	.footer-columns ul{
+		list-style: none;
+	}
+	.footer-columns a{
+		color: #ddd;
+	}
+	.footer-columns ul li{
+		border-bottom: 1px solid #777;
+	}
+</style>
 <footer class="hide-for-small">
 	<div class="footer-head">
 		<div class="shadow-left"></div>
@@ -7,12 +26,31 @@
 		</div>
 	</div>
 	<div class=" footer-contenido">
-		<div class="four columns"></div>
-		<div class="four columns"></div>
-		<div class="four columns"></div>
-	</div>					
+		<div class="row footer-columns">
+			<div class="two columns">
+				<h4>Navegaci&oacute;n</h4>
+				<ul id="categorias_footer"></ul>
+			</div>
+			<div class="two columns">
+				<h4>Social</h4>
+				<p>
+					<a href="https://www.facebook.com/pages/Mall-Victoria/502978543101439" target="_blank"><i class="social foundicon-facebook icono" ><span class="social-texto"> Facebook</span></i></a>
+				</p>
+				<p><a href="https://twitter.com/mallvictoria" target="_blank"><i class="social foundicon-twitter icono"> <span class="social-texto">Twitter</span></i></a>
+				</p>
+			</div>
+			<div class="four columns"></div>
+
+			<div class="four columns">
+				<h4>Acerca de ...</h4>
+				<p>Mall Victoria es un sitio donde podras publicar articulos completamente gratis,Tienes 3 espacios que puedes utilizar para postear cualquier articulo o servicio que quieras promocionar. Cada espacio tendra una duracion de 15 dias.</p>
+			</div>
+		</div>
+	</div>
+
 	<div class=" footer-social">
-		<a href="#"><i class="social foundicon-facebook icono"> <span class="texto">Facebook</span></i></a>
-		<a href="#"><i class="social foundicon-twitter icono"> <span class="texto">Twitter</span></i></a>
+		<a href="https://www.facebook.com/pages/Mall-Victoria/502978543101439" target="_blank"><i class="social foundicon-facebook icono"> <span class="texto">Facebook</span></i></a>
+		<a href="https://twitter.com/mallvictoria" target="_blank"><i class="social foundicon-twitter icono"> <span class="texto">Twitter</span></i></a>
 	</div>					
-</footer>		
+</footer>	
+<script></script>	
