--- a/mallvictoria/mallvictoria/plantillas/base/navbar.html
+++ b/mallvictoria/mallvictoria/plantillas/base/navbar.html
@@ -28,7 +28,7 @@
 						    <li id="button-bar" style="display:none;"><a href="#"> <i class="general foundicon-unlock"></i> Entrar</a></li>
 					    <li class="has-dropdown" id="menu_login" style="display:none;">
 					      <a href="#"><span id="datos_correo"></span></a>
-						    <ul class="dropdown" id="categorias">
+						    <ul class="dropdown">
 						    	<li><a href="/administracion/">Mis Articulos</a></li>
 						    	<li><a href="/perfil?idusuario=5">Perfil</a></li>
 						    	<li><a href="/ayuda">Ayuda</a></li>
