--- a/mallvictoria/mallvictoria/plantillas/base/help_logo.html
+++ b/mallvictoria/mallvictoria/plantillas/base/help_logo.html
@@ -1,3 +1,3 @@
 <section id="help" class="row">
-	<div class="two columns centered" style="text-align:center;"><img src="{{STATIC_URL}}img/help.png" style="width:80px;margin-top:10px;" alt=""></div>
+	<div class="two columns centered" style="text-align:center;"></div>
 </section>
