--- a/mallvictoria/mallvictoria/plantillas/base/frmregistro.html
+++ b/mallvictoria/mallvictoria/plantillas/base/frmregistro.html
@@ -8,8 +8,7 @@
 			<label for="m_password">Contrase&ntilde;a:</label>
 			<input type="password" id="m_password" name="m_password">
 			<input type="hidden" name="csrfmiddlewaretoken">
-			<a href="#" class="button success" id="btnLogin">Entrar</a>	<a href="#">No tengo cuenta y deseo regristarme</a>
-
+			<a href="#" class="button success" id="btnLogin">Entrar</a>	<!--<a href="#">No tengo cuenta y deseo regristarme</a>-->
 		</form>
 	</fieldset>
 	<div id="msgLogin"></div>
