--- a/mallvictoria/mallvictoria/plantillas/base/header.html
+++ b/mallvictoria/mallvictoria/plantillas/base/header.html
@@ -4,6 +4,7 @@
 			Bienvenidos
 		</div>
 		<h1>MallVictoria<span class="com">.com</span></h1>
+		<a href="registro" class="button small secondary" id="btn_registro">Registrate &raquo;</a>
 	</div>
 	<div class="two columns">
 	<img src="{{STATIC_URL}}img/logo_1.png" style="margin-top:20px;" alt="">
