--- a/mallvictoria/mallvictoria/plantillas/administracion/articulo_locker.html
+++ b/mallvictoria/mallvictoria/plantillas/administracion/articulo_locker.html
@@ -28,7 +28,7 @@
 					<div class="six columns text-left col_izq"><strong>{{articulo.1}} dias</strong></div>
 					<div class="six columns text-right col_der">Costo:</div>
 					<div class="six columns text-left col_izq">$ {{articulo.0.articulo.costo}}</div>
-					<div class="six columns text-right col_der">Categoria:</div>
+					<div class="six columns text-right col_der">Categor&iacute;a:</div>
 					<div class="six columns text-left col_izq">{{articulo.0.articulo.categoria.categoria}}</div>
 					<div class="six columns text-right col_der">Tipo:</div>
 					<div class="six columns text-left col_izq">{{articulo.0.articulo.tipo.tipo}}</div>
