--- a/mallvictoria/mallvictoria/plantillas/administracion/ayuda.html
+++ b/mallvictoria/mallvictoria/plantillas/administracion/ayuda.html
@@ -16,11 +16,11 @@
 				<h3>Gracias por registrarte en mallvictoria.com</h3>
 				<p>Ahora date un tiempo para leer este tutorial antes de comenzar.</p>
 				<h4>Tutorial</h4>
-				<p><span class="success label">Paso 1:</span> Completa los datos de tu perfil para que los usuarios que vean tus articulos puedan localizarte mas facilmente.</p>
+				<p><span class="success label">Paso 1:</span> Completa los datos de tu perfil para que los usuarios que vean tus art&iacute;culos puedan localizarte mas f&aacute;cilmente.</p>
 				<p>
-					<span class="success label">Paso 2:</span> Tienes 3 espacios que puedes utilizar para postear cualquier articulo o servicio que quieras promocionar. Cada espacio tendra una duracion de 15 dias, al cumplirse los 15 dias el articulo se borrara de la lista y tu espacio quedara libre para que lo puedas reutilizar cuantas veces quieras. 
+					<span class="success label">Paso 2:</span> Tienes 3 espacios que puedes utilizar para postear cualquier articulo o servicio que quieras promocionar. Cada espacio tendr&aacute; una duraci&oacute;n de 15 d&iacute;as, al cumplirse los 15 d&iacute;as el articulo se borrara de la lista y tu espacio quedara libre para que lo puedas reutilizar cuantas veces quieras. 
 				</p>
-				<p>Podras marcar cualquiera de tus articulos como terminado y re-utilizar ese espacio.</p>
+				<p>Podr&aacute;s marcar cualquiera de tus art&iacute;culos como terminado y re-utilizar ese espacio.</p>
 			</div>									
 		</section>		
 		
