--- a/mallvictoria/mallvictoria/plantillas/administracion/locker.html
+++ b/mallvictoria/mallvictoria/plantillas/administracion/locker.html
@@ -22,7 +22,7 @@
 					 <label for="titulo" {%if formulario.errors.titulo%}class='error'{%endif%}>Articulo:</label>					
 					{{formulario.titulo}}
 					{{formulario.errors.titulo}}
-					<label for="descripcion" {%if formulario.errors.descripcion%}class='error'{%endif%}>Descripcion:</label>
+					<label for="descripcion" {%if formulario.errors.descripcion%}class='error'{%endif%}>Descripci&oacute;n:</label>
 					{{formulario.descripcion}}
 					{{formulario.errors.descripcion}}
 
