--- a/mallvictoria/mallvictoria/plantillas/administracion/perfil.html
+++ b/mallvictoria/mallvictoria/plantillas/administracion/perfil.html
@@ -28,11 +28,11 @@
 				{{formulario.password}}	
 				<label for="nombre" {%if formulario.errors.nombre%}class='error'{%endif%}><strong>Nombre de Contacto, Empresa o Negocio:</strong></label>{{formulario.nombre}}
 				{{formulario.errors.nombre}}
-				<label for="direccion">Direccion:</label>
+				<label for="direccion">Direcci&oacute;n:</label>
 				{{formulario.direccion}}
 				<label for="telefono">Telefono:</label>
 				{{formulario.telefono}}				
-				<label for="sitioweb">Pagina Personal:</label>
+				<label for="sitioweb">P&aacute;gina Personal:</label>
 				{{formulario.sitioweb}}			
 				<div class="row">
 					<div class="six columns">
