--- a/mallvictoria/mallvictoria/plantillas/base/footer.html
+++ b/mallvictoria/mallvictoria/plantillas/base/footer.html
@@ -43,7 +43,7 @@
 
 			<div class="four columns">
 				<h4>Acerca de ...</h4>
-				<p>Mall Victoria es un sitio donde podras publicar articulos completamente gratis,Tienes 3 espacios que puedes utilizar para postear cualquier articulo o servicio que quieras promocionar. Cada espacio tendra una duracion de 15 dias.</p>
+				<p>Mall Victoria es un sitio donde podr&aacute;s publicar art&iacute;culos completamente gratis,Tienes 3 espacios que puedes utilizar para postear cualquier art&iacute;culo o servicio que quieras promocionar. Cada espacio tendra una duraci&oacute;n de 15 d&iacute;as.</p>
 			</div>
 		</div>
 	</div>
