--- a/mallvictoria/mallvictoria/plantillas/administracion/editlocker.html
+++ b/mallvictoria/mallvictoria/plantillas/administracion/editlocker.html
@@ -29,7 +29,7 @@
 					<label for="titulo" {%if formulario.errors.titulo%}class='error'{%endif%}>Articulo:</label>	
 					{{formulario.titulo}}
 					{{formulario.errors.titulo}}
-					<label for="descripcion" {%if formulario.errors.descripcion%}class='error'{%endif%}>Descripcion:</label>
+					<label for="descripcion" {%if formulario.errors.descripcion%}class='error'{%endif%}>Descripci&oacute;n:</label>
 					{{formulario.descripcion}}
 					{{formulario.errors.descripcion}}
 					<div class="row">
