--- a/mallvictoria/mallvictoria/plantillas/base/navbar.html
+++ b/mallvictoria/mallvictoria/plantillas/base/navbar.html
@@ -11,7 +11,7 @@
 					<section>
 					  	<ul class="left">				  		
 					    <li class="has-dropdown" id="button-nav-bar">
-					      <a href="#">Navegacion</a>
+					      <a href="#">Navegaci&oacute;n</a>
 						    <ul class="dropdown" id="categorias"></ul>
 						</li>
 
@@ -29,7 +29,7 @@
 					    <li class="has-dropdown" id="menu_login" style="display:none;">
 					      <a href="#"><span id="datos_correo"></span></a>
 						    <ul class="dropdown">
-						    	<li><a href="/administracion/">Mis Articulos</a></li>
+						    	<li><a href="/administracion/">Mis Art&iacute;culos</a></li>
 						    	<li><a href="/perfil">Perfil</a></li>
 						    	<li><a href="/ayuda">Ayuda</a></li>
 						    	<li><a href="#" id="btnCerrarSession"> <i class="general foundicon-lock"></i> Cerrar</a></li>
