--- a/mallvictoria/mallvictoria/plantillas/detalle.html
+++ b/mallvictoria/mallvictoria/plantillas/detalle.html
@@ -32,7 +32,7 @@
 								<a id="twitter" href="http://twitter.com/share?text=@mallvictoria%20{{tweet}}%20&url=http://www.mallvictoria.com/detalle?idarticulo={{articulo.id}}" target="_black" class="social-icono"><i class="social foundicon-twitter icono" style="color:#4099ff;"> <span class="social-texto">Twitter</span></i></a>
 								</div>
 							</p>
-							<p class="etiqueta">Decripcion:</p>
+							<p class="etiqueta">Decripci&oacute;n:</p>
 							<p>{{articulo.descripcion}}</p>
 							<section id="datos-contacto">
 								<p class="etiqueta">Datos de Contacto;</p>
@@ -53,7 +53,7 @@
 					<div class="row">
 						<div>
 						<div class="twelve columns"> 
-							<h4 class="titulo">Articulos Relacionados</h4>
+							<h4 class="titulo">Art&iacute;culos Relacionados</h4>
 						</div>
 						<div class="twelve columns"> 
 							<div class="lista">
