--- a/mallvictoria/mallvictoria/plantillas/base/navbar.html
+++ b/mallvictoria/mallvictoria/plantillas/base/navbar.html
@@ -30,7 +30,7 @@
 					      <a href="#"><span id="datos_correo"></span></a>
 						    <ul class="dropdown">
 						    	<li><a href="/administracion/">Mis Art&iacute;culos</a></li>
-						    	<li><a href="/perfil">Perfil</a></li>
+						    	<li><a href="/perfil">Mi Perfil</a></li>
 						    	<li><a href="/ayuda">Ayuda</a></li>
 						    	<li><a href="#" id="btnCerrarSession"> <i class="general foundicon-lock"></i> Cerrar</a></li>
 						    </ul>
