--- a/mallvictoria/mallvictoria/plantillas/administracion/locker.html
+++ b/mallvictoria/mallvictoria/plantillas/administracion/locker.html
@@ -15,6 +15,7 @@
 		<section id="wrapper" class="row wrap">
 		<div class="twelve mobile-four columns">
 		<h1>Locker {{idlocker}}</h1>
+		{{formulario.errors}}
 		<form id="frmarticulo" class="custom" enctype="multipart/form-data" action="" method="post">{% csrf_token %}
 			<fieldset>					
 					<input type="hidden" name="usuario" id="id_usuario">
