--- a/mallvictoria/mallvictoria/plantillas/base/head.html
+++ b/mallvictoria/mallvictoria/plantillas/base/head.html
@@ -11,3 +11,12 @@
 <link href='{{STATIC_URL}}img/favicon.ico' rel='icon' type='image/x-icon'/>
 <link rel="shortcut icon" href="{{STATIC_URL}}img/favicon.ico" type="image/vnd.microsoft.icon" />
 <link rel="icon" href="{{STATIC_URL}}img/favicon.ico" type="image/vnd.microsoft.icon" />
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-40891139-1', 'mallvictoria.com');
+  ga('send', 'pageview');
+</script>
